@@ -48,8 +48,9 @@ int screen_capture(void)
 	int err;
 
 	/* bug #1662383: V200 replies as busy but screenshot is working anyways */
-	/*if(tilp_calc_isready())
-		return -1;*/
+	if(options.calc_model != CALC_V200)
+		if(tilp_calc_isready())
+			return -1;
 
 	/* Place a progress bar */
 	gif->create_pbar_(FNCT_RECV_SCREEN, _("Screendump"));
